fixed top from being visible on other pages

--- a/src/routes/About.css
+++ b/src/routes/About.css
@@ -15,6 +15,7 @@
 }
 
 .aboutContainer .Top {
+	visibility: hidden;
 	flex: none;
 }
 
