--- a/src/routes/Projects.css
+++ b/src/routes/Projects.css
@@ -25,6 +25,12 @@
 	color: #00f;
 }
 
+.projectsContainer .Top {
+  visibility: hidden;
+  flex: none;
+}
+
+
 /*------------------------ projectModule ------------------------ */
 
 
